syntax = "proto3";
package rpc;

import "google/protobuf/timestamp.proto";
import "github.com/alerting/alerts/cap/cap.proto";

service AlertService {
   // Get
   rpc HasAlert (AlertRequest) returns (AlertExistsResponse);
   rpc GetAlert (AlertRequest) returns (cap.Alert);
   //rpc GetInfo (AlertRequest) returns (AlertHit);

   // Find
   rpc FindAlerts (AlertsRequest) returns (AlertsResponse);

   // Add
   rpc AddAlert (cap.Alert) returns (Empty);
   rpc AddAlerts (stream cap.Alert) returns (Empty);
}

message Empty {
}

message AlertExistsResponse {
   bool exists = 1;
}

message AlertRequest {
   string id = 1;
}

message TimeQuery {
   google.protobuf.Timestamp gte = 1;
   google.protobuf.Timestamp gt = 2;
   google.protobuf.Timestamp lte = 3;
   google.protobuf.Timestamp lt = 4;
}

message Coordinate {
   double lat = 1;
   double lon = 2;
}

message AlertsRequest {
   int32 start = 1;
   int32 count = 2;
   repeated string sort = 3;

   // alert
   bool superseded = 4;
   bool not_superseded = 5;
   cap.Alert.Status status = 6;
   cap.Alert.MessageType message_type = 7;
   cap.Alert.Scope scope = 8;

   // info
   string language = 9;
   cap.Info.Certainty certainty = 10;
   cap.Info.Severity severity = 11;
   cap.Info.Urgency urgency = 12;
   string headline = 13;
   string description = 14;
   string instruction = 15;
   TimeQuery effective = 16;
   TimeQuery onset = 17;
   TimeQuery expires = 18;

   // Area
   string area_description = 19;
   Coordinate point = 20;
}

message AlertHit {
   string id = 1;
   cap.Alert alert = 2;
   cap.Info info = 3;
}

message AlertsResponse {
   int64 total = 1;
   repeated AlertHit hits = 2;
}